--- a/src/layout/defaultLayout/styles.scss
+++ b/src/layout/defaultLayout/styles.scss
@@ -1,3 +1,12 @@
-h1 {
-	color: aqua;
+.header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 10px 20px;
+	background-color: #fff;
+	border: 1px solid #dcdcdc;
+}
+
+.outlet {
+	flex: 1;
 }
