--- a/src/components/SideBar/styles.scss
+++ b/src/components/SideBar/styles.scss
@@ -1,7 +1,24 @@
 .sidebar {
-	flex: 0 0 auto;
 	width: 250px;
-	background-color: #333;
-	color: #fff;
+	background-color: #fff;
+	border: 1px solid #dcdcdc;
 	overflow-y: auto;
+	padding: 32px 10px;
+}
+
+.navigation {
+	width: 100%;
+}
+
+.text-navigation {
+	background: #e9e9e9;
+	color: #202020;
+	font-family: "Poppins", sans-serif;
+	font-weight: 500;
+	font-size: 16px;
+	display: flex;
+	border-radius: 8px;
+	padding: 14px 10px;
+	align-items: inherit;
+	gap: 8px;
 }
