--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,7 +1,18 @@
+.logo {
+	display: flex;
+	width: 38%;
+	justify-content: center;
+
+	img {
+		width: 124px;
+		height: 35px;
+	}
+}
+
 .main-search-bar {
 	display: flex;
 	width: 100%;
-	margin: 0 120px;
+	margin: 0 100px;
 }
 
 .search-bar {
@@ -14,17 +25,19 @@
 	background-color: #f9f9f9;
 	padding: 5px 10px;
 	margin-right: 10px;
-	border-radius: 5px;
 	border: 1px solid #f9f9f9;
 	color: #555;
 	border-radius: 6px;
 }
 
+.search-bar input::placeholder {
+	padding: 0 0 0 35px;
+}
+
 .search-icon {
 	position: absolute;
-	top: 55%;
-	right: 20px;
-	transform: translateY(-50%);
+	top: 28%;
+	left: 2%;
 	color: #666;
 }
 
