--- a/src/layout/defaultLayout/styles.scss
+++ b/src/layout/defaultLayout/styles.scss
@@ -1,12 +1,19 @@
 .header {
 	display: flex;
+	height: 86px;
 	align-items: center;
 	justify-content: space-between;
-	padding: 10px 20px;
+	padding: 15px 20px;
 	background-color: #fff;
 	border: 1px solid #dcdcdc;
 }
 
+.main {
+	display: flex;
+}
+
 .outlet {
 	flex: 1;
+	background-color: #f9f9f9;
+	padding: 26px 56px;
 }
