--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -197,3 +197,44 @@ td.actions {
 	padding: 8px 0;
 	gap: 10px;
 }
+
+.confirmation-modal-container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+}
+
+.confirmation-modal {
+	display: flex;
+	background-color: #fff;
+	flex-direction: column;
+	gap: 10px;
+	border-radius: 8px;
+	padding: 20px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	z-index: 10000;
+}
+
+.confirmation-modal p {
+	margin-bottom: 15px;
+}
+
+.confirmation-modal button {
+	padding: 8px 16px;
+	margin-right: 10px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+.confirmation-modal button:last-child {
+	background-color: #dc3545;
+	color: #fff;
+}
