--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -168,34 +168,35 @@
 td.actions {
 	display: flex;
 	gap: 10px;
-
-	button {
-		font-weight: 600 !important;
-	}
 }
 
 .edit-button {
 	cursor: pointer;
 	font-family: "Inter", sans-serif;
+	font-weight: 700;
 	color: #fff;
 	background-color: #492de7;
 	font-size: 10px;
 	border-radius: 10px;
-	padding: 8px 0;
 	gap: 10px;
+	display: flex;
+	align-items: center;
+	padding: 4px 12px;
 	border: none;
 }
 
 .delete-button {
-	cursor: pointer;
-	font-family: "Inter", sans-serif !important;
-	color: #fff;
 	background-color: #e72d2d;
+	font-family: "Inter", sans-serif;
+	font-weight: 700;
+	color: #fff;
 	font-size: 10px;
 	border-radius: 10px;
-	border: none;
-	padding: 8px 0;
 	gap: 10px;
+	display: flex;
+	align-items: center;
+	padding: 4px 12px;
+	border: none;
 }
 
 .confirmation-modal-container {
