:sparkles: feat: adjusts generals

--- a/src/pages/Register/styles.scss
+++ b/src/pages/Register/styles.scss
@@ -107,3 +107,10 @@ input::placeholder {
 	width: auto !important;
 	justify-content: end !important;
 }
+
+.register-return {
+	display: flex;
+	align-items: center;
+	gap: 6px;
+	color: #0c1421;
+}
